1.3.12.1 - new info in send mes - rounded double